--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="sk.vx.connectbot"
-	android:versionName="1.0.0"
+	android:versionName="1.7.1-1"
 	android:versionCode="1"
 	android:installLocation="auto">
 
