Import android-file-dialog library (BSD-licensed) with some fixes. Move file selection to a separate library (FileChooser). Add menu option to select a File Dialog application.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -83,6 +83,13 @@
 		<activity android:name=".HelpTopicActivity" android:configChanges="keyboardHidden|orientation" />
 		<activity android:name=".ColorsActivity" android:configChanges="keyboardHidden|orientation" />
 
+		<activity android:name="com.lamerman.FileDialog">
+		    <intent-filter>
+		        <action android:name="android.intent.action.MAIN" />
+		        <category android:name="android.intent.category.LAUNCHER" />
+		    </intent-filter>
+		</activity>
+
 		<service android:name="sk.vx.connectbot.service.TerminalManager"
 			android:configChanges="keyboardHidden|orientation"
 			android:description="@string/service_desc" />
